# c-c-plus-plus-developer-challenge

./: CMakeLists.txt  README.md  README_INSTRUCTIONS.md  build.sh  build_check.sh  build_unit_test.sh  install_deps.sh  matrix_appication_docs.conf
config/: config_app.hpp  config_app_logger.hpp
drv/: drv_data_base.cpp  drv_data_base.hpp
libs/: lib_matrix.cpp  lib_matrix.h  lib_menu.cpp  lib_menu.h  matrix.cpp  matrix.h
libs/lib_expression/: parser.cpp  parser.h  symbol.h  symbol_node.h  tree_expression.cpp  tree_expression.h
libs/lib_hmi/: Hmi.h  hmi.h
libs/lib_menu/: lib_menu.cpp  lib_menu.h
src/: Hmi.h  HmiCli.cpp  HmiCli.h  app_hmi.cpp  app_hmi.hpp  app_logger.cpp  app_logger.hpp  app_matrix.cpp  app_matrix.h  app_matrix.hpp  app_menu.cpp  app_menu.hpp  app_progs.cpp  app_progs.hpp  main  main.cpp  matrix.cpp  matrix.h  prompt_hmi.cpp  prompt_hmi.h
unitTest/: CMakeLists.txt  lib_matrix_test.cpp  main.cpp  math_matrix_test.cpp
